# pigweed

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  BUILD.gn  CMakeLists.txt  Kconfig.zephyr  MODULE.bazel  OWNERS  PIGWEED_MODULES  WORKSPACE  bootstrap.sh  package.json  pigweed.json  pw  tsconfig.json  workflows.json
docs/sphinx/changelog/py/: BUILD.bazel  OWNERS  __main__.py  changelog.py  commit.py  helpers.py  story.py
pw_async2/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  allocate_task_test.cc  backend.cmake  backend.gni  callback_task_test.cc  cancellable_task_test.cc  channel.cc  channel_coro_test.cc  channel_test.cc  channel_thread_test.cc  channel_typed_test.cc  channels.rst  code_size.rst  context.cc  coro.cc  coro_or_else_task_test.cc  coro_test.cc  coroutines.rst  dispatcher.cc  dispatcher.rst  dispatcher_base.cc  dispatcher_for_test.cc  dispatcher_test.cc  dispatcher_thread_test.cc  docs.rst  enqueue_heap_func_test.cc  epoll_dispatcher.cc  future.cc  future_test.cc  future_timeout_test.cc  futures.rst  guides.rst  informed_poll.rst  join_test.cc  once_sender_test.cc  pend_func_awaitable_test.cc  pend_func_task_test.cc  (+15 more)
pw_async2/codelab/: BUILD.bazel  coin_slot.cc  coin_slot_test.cc  hardware.cc  item_drop_sensor.cc  main.cc
pw_async2/codelab/step1/: BUILD.bazel  docs.rst
pw_async2/codelab/step1/checkpoint1/: main.cc
pw_async2/codelab/step2/: BUILD.bazel
pw_async2/codelab/step2/checkpoint2/: main.cc
pw_async2/codelab/step3/: BUILD.bazel  docs.rst
pw_async2/codelab/step3/checkpoint4/: main.cc  (+1 more)
pw_async2/codelab/step4/: BUILD.bazel
pw_async2/codelab/step5/: BUILD.bazel
pw_async2/codelab/webui/: BUILD.bazel  package.json
pw_async2/dispatcher_for_test_public_overrides/pw_async2_backend/: native_dispatcher_for_test.h
pw_async2/epoll_dispatcher_for_test_public_overrides/pw_async2_backend/: native_dispatcher_for_test.h
pw_async2/examples/: BUILD.bazel  BUILD.gn  CMakeLists.txt  basic.cc  basic_coro.cc  basic_manual.cc  channel.cc  coro_blinky_loop.cc  count.cc  custom_future.cc  inline_async_queue_with_coro_test.cc  inline_async_queue_with_tasks_golden_test.expected  inline_async_queue_with_tasks_test.cc  interrupt.cc  once_send_recv_test.cc  quickstart.cc  timeout_test.cc  unit_test.cc
pw_async2/public/pw_async2/: allocate_task.h  basic_dispatcher.h  callback_task.h  cancellable_task.h  channel.h  context.h  coro.h  coro_or_else_task.h  dispatcher.h  dispatcher_base.h  dispatcher_for_test.h  enqueue_heap_func.h  epoll_dispatcher.h  future.h  future_timeout.h  join.h  lock.h  notified_dispatcher.h  once_sender.h  owned_task.h  pend_func_awaitable.h  pend_func_task.h  pendable.h  poll.h  runnable_dispatcher.h  select.h  simulated_time_provider.h  system_time_provider.h  task.h  time_provider.h  try.h  value_future.h  waker.h  waker_queue.h
pw_async2/size_report/: BUILD.bazel  async2_core.cc  channel_size_report.cc  join.cc  select.cc  size_report.cc  value_future.cc
pw_async2_epoll/: BUILD.bazel  BUILD.gn  CMakeLists.txt  dispatcher.cc  dispatcher_native.cc
pw_async2_epoll/dispatcher_for_test_public_overrides/pw_async2_backend/: native_dispatcher_for_test.h
pw_async2_epoll/public_overrides/pw_async2/: dispatcher_native.h
pw_bluetooth_proxy/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  acl_data_channel.cc  basic_l2cap_channel.cc  basic_l2cap_channel_internal.cc  basic_mode_channel_proxy_test.cc  basic_mode_rx_engine.cc  basic_mode_rx_engine_test.cc  basic_mode_tx_engine.cc  basic_mode_tx_engine_test.cc  bt-proxy.bzl  channel_proxy.cc  channel_proxy_impl.cc  channel_proxy_test.cc  credit_based_flow_control_rx_engine.cc  credit_based_flow_control_rx_engine_test.cc  credit_based_flow_control_tx_engine.cc  credit_based_flow_control_tx_engine_test.cc  docs.rst  gatt_notify_channel.cc  gatt_notify_channel_internal.cc  gatt_notify_test.cc  gatt_notify_tx_engine.cc  gatt_notify_tx_engine_test.cc  generic_l2cap_channel.cc  generic_l2cap_channel_async.cc  generic_l2cap_channel_sync.cc  h4_packet_test.cc  l2cap_channel.cc  l2cap_channel_async.cc  l2cap_channel_manager.cc  l2cap_channel_manager_async.cc  l2cap_channel_manager_sync.cc  l2cap_channel_sync.cc  l2cap_coc.cc  l2cap_coc_internal.cc  l2cap_coc_test.cc  l2cap_logical_link.cc  (+15 more)
pw_bluetooth_proxy/comms2/: BUILD.bazel  BUILD.gn  proxy_test.cc
pw_bluetooth_proxy/gatt/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  gatt.bzl  gatt.cc  gatt_integration_test.cc  gatt_test.cc
pw_bluetooth_proxy/hci/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  command_multiplexer.cc  command_multiplexer_test.cc
pw_bluetooth_proxy/public/pw_bluetooth_proxy/: basic_l2cap_channel.h  channel_proxy.h  config.h  connection_handle.h  gatt_notify_channel.h  h4_packet.h  l2cap_channel_common.h  l2cap_channel_manager_interface.h  l2cap_coc.h  l2cap_coc_config.h  proxy_host.h  rfcomm_channel.h  single_channel_proxy.h
pw_bluetooth_proxy/pw_bluetooth_proxy_private/: test_utils.h
pw_kernel/drivers/uart/: BUILD.bazel  kernel_uart.rs
pw_kernel/lib/pw_gdb_protocol/: BUILD.bazel
pw_memory/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  container_of_test.cc  docs.rst
pw_memory/public/pw_memory/: container_of.h
pw_multibuf/examples/: BUILD.bazel  BUILD.gn  async_queue.cc  pseudo_encrypt.cc  queue.cc  top_down_forward.cc  transfer.cc
pw_thread_zephyr/: BUILD.bazel  CMakeLists.txt  Kconfig  sleep.cc
pw_thread_zephyr/public/pw_thread_zephyr/: options.h  sleep_inline.h
pw_thread_zephyr/thread_public_overrides/pw_thread_backend/: options.h
pw_web/: BUILD.bazel  jest.config.ts  jest.polyfills.js  log_viewer.rst  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup-protos.config.js  rollup.config.js
pw_web/log-viewer/src/: console.ts
pw_web/ts/: console.ts  index.ts  index_test.ts  logging.ts  logging_source_rpc.ts
pw_web/ts/device/: index_test.ts
pw_web/ts/transport/: web_serial_transport_test.ts
targets/fuchsia/: BUILD.bazel  target_docs.rst
targets/host_device_simulator/: BUILD.bazel  transition.bzl
targets/microbit/: BUILD.bazel
(+1060 files in other folders)
